# qgis-yolo-plugin

./: .gitignore  README.md  main.py  pyproject.toml
display_info/: Makefile  README.html  README.txt  __init__.py  display_info.py  display_info_dialog.py  display_info_dialog_base.ui  metadata.txt  pb_tool.cfg  resources.py  resources.qrc
display_info/help/source/: conf.py  index.rst
display_info/test/: test_display_info_dialog.py  test_resources.py
tests/: conftest.py  smoke_test_yolo_plugin.py  test_yolo_plugin.py  test_yolo_plugin_dialog.py
train/: compare.py  dataset.py  train.py
train/dataset/: DOTANA.yaml  DOTANA_no_ships.yaml  ShipRSImageNet.yaml  data_exploration.ipynb
yolo_mod/: LICENSE  __init__.py  metadata.txt  resources.qrc  yolo_mod.py  yolo_mod_dialog.py  yolo_mod_dialog_base.ui
yolo_plugin/: Makefile  README.html  README.txt  __init__.py  metadata.txt  pb_tool.cfg  resources.py  resources.qrc  yolo_plugin.py  yolo_plugin_dialog.py  yolo_plugin_dialog_base.ui
yolo_plugin/help/source/: conf.py  index.rst
yolo_plugin/test/: test_resources.py  test_yolo_plugin_dialog.py
