[project]
name = "qgis-yolo-plugin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.9",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
    "ultralytics",
]

[tool.uv.sources]
ultralytics = { git = "https://github.com/mateusz29/ultralytics-softnms.git" }
